--- a/index.html
+++ b/index.html
@@ -3,196 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Downloader</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .input-group {
-            margin-bottom: 1rem;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 0.5rem;
-            margin-bottom: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            background-color: #007bff;
-            color: #fff;
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .progress {
-            margin-top: 1rem;
-            height: 20px;
-            background-color: #f3f3f3;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-        .progress-bar {
-            height: 100%;
-            background-color: #4caf50;
-        }
-        .status {
-            margin-top: 1rem;
-            font-size: 0.8rem;
-            color: #888;
-        }
-    </style>
+    <title>Simple HLS Video Player</title>
 </head>
 <body>
-    <div class="container">
-        <div class="input-group">
-            <input type="text" id="videoUrl" placeholder="Enter .m3u8 video URL">
-        </div>
-        <div class="input-group">
-            <input type="text" id="fileName" placeholder="Enter desired file name">
-        </div>
-        <button id="downloadButton">Download Video</button>
-        <div class="progress">
-            <div class="progress-bar" id="progressBar"></div>
-        </div>
-        <div class="status" id="status"></div>
-    </div>
-
-    <script>
-        const videoUrlInput = document.getElementById('videoUrl');
-        const fileNameInput = document.getElementById('fileName');
-        const downloadButton = document.getElementById('downloadButton');
-        const progressBar = document.getElementById('progressBar');
-        const status = document.getElementById('status');
-
-        let progressInterval;
-
-        downloadButton.addEventListener('click', async () => {
-            const videoUrl = videoUrlInput.value;
-            const fileName = fileNameInput.value;
-
-            if (!videoUrl || !fileName) {
-                alert('Please enter both video URL and desired file name');
-                return;
-            }
-
-            status.textContent = 'Downloading...';
-            downloadButton.disabled = true;
-
-            try {
-                await downloadVideo(videoUrl, fileName);
-                sendDiscordWebhook('Video downloaded successfully!', 'success');
-                status.textContent = 'Download completed';
-                downloadButton.disabled = false;
-            } catch (error) {
-                console.error(error);
-                sendDiscordWebhook('Error downloading video: ' + error.message, 'error');
-                status.textContent = 'Download failed';
-                downloadButton.disabled = false;
-            }
-        });
-
-        function downloadVideo(videoUrl, fileName) {
-            return new Promise((resolve, reject) => {
-                const xhr = new XMLHttpRequest();
-                xhr.open('GET', videoUrl);
-                xhr.responseType = 'blob';
-                xhr.onload = () => {
-                    const blob = xhr.response;
-                    const reader = new FileReader();
-                    reader.onload = () => {
-                        const m3u8Content = reader.result;
-                        const segmentUrls = getSegmentUrls(m3u8Content, videoUrl);
-                        const videoData = new Uint8Array(0);
-
-                        let videoLength = 0;
-                        let segmentIndex = 0;
-
-                        const onUpdateProgress = (newVideoData) => {
-                            videoData.set(newVideoData, videoLength);
-                            videoLength += newVideoData.length;
-                            const progress = (segmentIndex / segmentUrls.length) * 100;
-                            progressBar.style.width = progress + '%';
-                        };
-
-                        const downloadSegment = (segmentUrl) => {
-                            const xhr = new XMLHttpRequest();
-                            xhr.open('GET', segmentUrl);
-                            xhr.responseType = 'arraybuffer';
-                            xhr.onload = () => {
-                                onUpdateProgress(new Uint8Array(xhr.response));
-                                segmentIndex++;
-                                if (segmentIndex < segmentUrls.length) {
-                                    downloadSegment(segmentUrls[segmentIndex]);
-                                } else {
-                                    resolve(videoData);
-                                }
-                            };
-                            xhr.onerror = () => {
-                                reject(new Error('Error downloading segment'));
-                            };
-                            xhr.send();
-                        };
-
-                        downloadSegment(segmentUrls[segmentIndex]);
-                    };
-                    reader.onerror = () => {
-                        reject(new Error('Error reading m3u8 file'));
-                    };
-                    reader.readAsText(blob);
-                };
-                xhr.onerror = () => {
-                    reject(new Error('Error downloading m3u8 file'));
-                };
-                xhr.send();
-            });
-        }
-
-        function getSegmentUrls(m3u8Content, videoUrl) {
-            const segmentUrls = [];
-            const lines = m3u8Content.split('\n');
-            for (const line of lines) {
-                if (line.startsWith('http')) {
-                    segmentUrls.push(new URL(line, videoUrl).toString());
-                }
-            }
-            return segmentUrls;
-        }
-
-        function sendDiscordWebhook(message, status) {
-            const xhr = new XMLHttpRequest();
-            xhr.open('POST', 'https://discord.com/api/webhooks/1185341369003294791/v9FFc4vC0djnH88Hqfjeyuu1zSRaG767rcerNR8V66eTOXDTA8RJ_ncl98JN9oY9gcnM');
-            xhr.setRequestHeader('Content-Type', 'application/json');
-            xhr.send(JSON.stringify({
-                content: message,
-                username: 'Video Downloader',
-                avatar_url: 'https://i.imgur.com/oMJaVqe.png',
-                embeds: [{
-                    title: 'Video Downloader Status',
-                    description: `**Status:** ${status === 'success' ? ':white_check_mark:' : ':x:'} ${message}`,
-                    color: status === 'success' ? 0x00ff00 : 0xff0000,
-                }],
-            }));
-        }
-    </script>
+    <video
+        controls
+        width="100%"
+        height="auto"
+    >
+        <source
+            src="a.m3u8"
+            type="application/x-mpegURL"
+        >
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
