--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         height="auto"
     >
         <source
-            src="a.m3u8"
+            src="a.mp4"
             type="application/x-mpegURL"
         >
         Your browser does not support the video tag.
